# fast-api-task-manager

./: .env.sample  README.md  main.py  pyproject.toml
deep_medical/: database.py  exceptions.py  settings.py
deep_medical/actions/: task_manager.py
deep_medical/models/: mixins.py  task_manager.py
deep_medical/repos/: task_manager.py
deep_medical/routes/: task_manager.py
deep_medical/schemas/: task_manager.py
migrations/: env.py
migrations/versions/: 5cabf056d657_create_task_manager_table.py
tests/: conftest.py
tests/fixtures/: database.py  task_manager.py
tests/repos/: test_task_manager.py
tests/routes/: test_task_manager_routes.py
