[project]
name = "deep-medical"
version = "0.1.0"
description = "The deep medical backend challenge - task manager"
authors = [
    {name = "Raheem Azeez Abiodun",email = "raheemazeez4@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
